# rgi3

./: .gitignore  INTEGRATION_TEST_STATUS.md  README.md  conftest.py  package-lock.json  pyproject.toml  tsconfig.json
.cursor/rules/: code-standards.mdc  env-rules.mdc
.github/workflows/: ci.yml
docs/: PROFILING_REPORT.md  training_guide.md
experiments/c4_timed_1768126603/: config.json
experiments/c4_timed_1768126603/data/gen-1/: action.npy  boundaries.npy  policy.npy  value.npy
experiments/c4_timed_1768126603/data/gen-2/: action.npy  boundaries.npy  policy.npy  value.npy
experiments/c4_timed_1768126603/models/: gen-1.pt  gen-2.pt
experiments/c4_timed_1768126603/models/gen-1/: best.pt  ckpt.pt
experiments/c4_timed_1768126603/models/gen-2/: best.pt  ckpt.pt
experiments/c4_timed_1768126675/: config.json
experiments/c4_timed_1768126675/data/gen-1/: action.npy  boundaries.npy  policy.npy  value.npy
experiments/c4_timed_1768126675/data/gen-10/: action.npy  boundaries.npy  policy.npy  value.npy
experiments/c4_timed_1768126675/data/gen-11/: action.npy  boundaries.npy  policy.npy  value.npy
experiments/c4_timed_1768126675/data/gen-12/: action.npy  (+3 more)
experiments/c4_timed_1768126675/models/: gen-0.pt  gen-1.pt  gen-10.pt  gen-11.pt  gen-12.pt  gen-13.pt  gen-14.pt  gen-15.pt  gen-16.pt  gen-17.pt  gen-18.pt  gen-19.pt  gen-2.pt  gen-20.pt  gen-21.pt  gen-22.pt  gen-23.pt  gen-24.pt  gen-25.pt  gen-26.pt  gen-27.pt  gen-28.pt  gen-29.pt  gen-3.pt  gen-30.pt  gen-31.pt  gen-32.pt  gen-33.pt  gen-34.pt  gen-4.pt  gen-5.pt  gen-6.pt  gen-7.pt  gen-8.pt  gen-9.pt
experiments/c4_timed_1768127040/: config.json
experiments/c4_timed_1768127040/models/: gen-1.pt  gen-10.pt  gen-11.pt  gen-12.pt  gen-13.pt  gen-14.pt  gen-15.pt  gen-16.pt  gen-17.pt  gen-18.pt  gen-2.pt  gen-3.pt  gen-4.pt  gen-5.pt  gen-6.pt  gen-7.pt  gen-8.pt  gen-9.pt
experiments/overnight_2026_01_08/: results.json
experiments/overnight_2026_01_08/00_baseline/: config.json
experiments/overnight_2026_01_08/01_higher_lr/: config.json
experiments/overnight_2026_01_08/02_more_sims/: config.json
experiments/overnight_2026_01_08/03_bigger_model/: config.json
experiments/overnight_2026_01_08/04_more_gens/: config.json
experiments/overnight_2026_01_08/05_lower_dropout/: config.json
experiments/overnight_2026_01_08/06_combined/: config.json
experiments/overnight_2026_01_08/07_even_bigger/: config.json
experiments/overnight_2026_01_08/08_bigger_more_sims/: config.json
notebooks/: connect4.ipynb  notebook_utils.py  numba.ipynb  play_game.ipynb  result_cache-v0.0.2.json  result_cache-v0.0.3-smart.json  result_cache-v0.0.3.json  result_cache-v0.0.4-smoketest.json  result_cache-v0.0.5-smoketest.json  result_cache-vv0.0.1.json  rgizero-e2e-megamerge.ipynb  rgizero-e2e-smarttune.ipynb  rgizero-e2e-smoketest-debug.ipynb  rgizero-e2e-smoketest.ipynb  rgizero-e2e.ipynb  rgizero-perf.ipynb  rgizero-play-games.ipynb  rgizero-scratch.ipynb  rgizero-shakespeare.ipynb  run_nanogpy.ipynb  tqdm-fail.ipynb
scripts/: bench_grpc_async.py  compile_frontend.sh  format-and-run-checks.sh  overnight_experiments.py  profile_cpu_hotspots.py  profile_full_pipeline.py  profile_selfplay.py  run_experiment.py  run_tests.sh  run_tournament_demo.py  run_tournament_grpc.py  start_web_app.sh  test_consistency.sh  test_elo_consistency.py  test_integration.sh  test_othello_grpc.py  test_parallel_selfplay.py  test_rgizero.sh  train_connect4_60min.py  train_long_experiment.py
src/rgi/: __init__.py
src/rgi/nanogpt/: wrapper.py
src/rgi/rgizero/: common.py  evaluators.py  experiment.py  inference_server.py  model.py  numba_compat.py  tournament.py  train.py  trajectory_dataset.py  utils.py
tests/: __init__.py  test_nanogpt.py
tests/nanogpt/: test_nanogpt.py
tests/rgizero/: test_common.py  test_experiment.py  test_game_specific_integration.py  test_integration.py  test_model_predictions.py  test_tournament.py  test_train.py  test_trajectory_dataset.py
tests/rgizero/data/: test_text_dataset.py  test_trajectory_dataset.py
tests/rgizero/games/: test_connect4.py  test_count21.py  test_game_registry.py  test_history_wrapper.py  test_othello.py
tests/rgizero/models/: __init__.py  test_action_history_transformer.py  test_token_transformer.py  test_transformer.py
tests/rgizero/players/: test_alphazero.py  test_human_player.py  test_minimax_player.py  test_random_player.py
tests/web_app/: test_api.py
web_app/app/: main.py
web_app/src/: connect4.ts  game_common.ts  index.ts  othello.ts
web_app/static/: styles.css
web_app/templates/: base.html  connect4.html  game.html  index.html  othello.html
(+560 files in other folders)
