[project]
name = "rgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "rodneyodonnell1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "line-profiler>=5.0.0",
    "numba>=0.62.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.12.12",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "nbstripout",
  "ty",
  "jupyterlab",
  "ipykernel",
  "jupytext",
  "matplotlib",
  "pandas",
  ]


[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
  "src/rgi/nanogpt/fork/**",
]
extend-include = ["*.ipynb"]

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Ignore common notebook issues
"*.ipynb" = [
    "E402",  # module-import-not-at-top-of-file
    "F401",  # unused-import
    "F811",  # redefined-while-unused
    "E731",  # lambda-assignment
    "F541",  # f-string without any placeholders
]



[tool.ty.src]
exclude = [
  "src/rgi/nanogpt/fork/**",
  "**/notebooks/*.ipynb",
]
