[project]
name = "rgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "rodneyodonnell1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "line-profiler>=5.0.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.12.12",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
    "wandb>=0.21.3",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
]

[project.optional-dependencies]
jit = ["numba>=0.62.0"]  # Not available on free-threaded Python 3.14t

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "nbstripout",
  "ty",
  "jupyterlab",
  "ipykernel",
  "jupytext",
  "matplotlib",
  "pandas",
  ]


[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
  "src/rgi/nanogpt/fork/**",
  "experiments/**",
  "data/**",
  "models/**",
  "notebooks/rgizero-e2e-smoketest.ipynb",  # Contains intentional STOP! marker
]
extend-include = ["*.ipynb"]

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Ignore common notebook issues
"*.ipynb" = [
    "E402",  # module-import-not-at-top-of-file
    "E999",  # syntax-error (notebooks may have intentional markers)
    "F401",  # unused-import
    "F811",  # redefined-while-unused
    "F821",  # undefined-name (notebooks run cells out of order)
    "E731",  # lambda-assignment
    "F541",  # f-string without any placeholders
    "E701",  # multiple statements on one line
    "F841",  # local variable is assigned to but never used
]



[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (slow, excluded by default)",
]

[tool.ty.src]
exclude = [
  "src/rgi/nanogpt/fork/**",
  "**/notebooks/*.ipynb",
]
